--- a/AccountAuthenticator/res/values/strings.xml
+++ b/AccountAuthenticator/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_fmt">Udinic Prefs</string>
     <string name="key1_action">setting1</string>
     <string name="key1_summary">This is where we set setting1</string>
+    <string name="signup_title">Create new account</string>
+    <string name="login_label">Log in</string>
 </resources>
